--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,8 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Log in to GHCR
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -37,6 +31,5 @@ jobs:
           build-args: |
             appVersion=nightly
           tags: |
-            "${{vars.BUILDKIT_IMAGE}}:nightly"
-            "ghcr.io/${{vars.BUILDKIT_IMAGE}}:nightly"
+            "ghcr.io/${{ github.repository }}:nightly"
 
