--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,14 +16,8 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Log in to GHCR
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -42,8 +36,6 @@ jobs:
           build-args: |
             appVersion=${{ env.TAG_NAME }}
           tags: |
-            "${{vars.BUILDKIT_IMAGE}}:${{ env.TAG_NAME }}"
-            "${{vars.BUILDKIT_IMAGE}}:latest"
-            "ghcr.io/${{vars.BUILDKIT_IMAGE}}:${{ env.TAG_NAME }}"
-            "ghcr.io/${{vars.BUILDKIT_IMAGE}}:latest"
+            "ghcr.io/${{ github.repository }}:${{ env.TAG_NAME }}"
+            "ghcr.io/${{ github.repository }}:latest"
 
